@@ -1,0 +1,16 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>ZBLAN fluoride glass</h1>
+
+<h2>Typical composition</h2>
+53% ZrF<sub>4</sub>, 20% BaF<sub>2</sub>, 20% NaF, 4% LaF<sub>3</sub>, 3% AlF<sub>3</sub>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/ZBLAN">ZBLAN - Wikipedia</a></li>
+<li><a href="https://en.wikipedia.org/wiki/Fluoride_glass">Fluoride glass - Wikipedia</a></li>
+</ul>
